fixing note overflow, flex-direction and other minor bugs

--- a/src/index.css
+++ b/src/index.css
@@ -42,9 +42,10 @@ body {
   height: 150px;
   margin: 0.5rem;
   padding: 0px;
-  border-bottom: 0.1rem solid #6b48ff;
+  /* border-bottom: 1rem solid #f9f8eb; */
   background-color: #f9f8eb;
   white-space: pre-wrap;
+  overflow: scroll;
 }
 
 .note--is-editing {
@@ -59,9 +60,14 @@ body {
   padding: 1rem;
   display: flex;
   justify-content: space-between;
+  position: relative;
+  flex-direction: column;
 }
 
 .note--is-not-editing__delete-button {
   color: #ff487e;
   cursor: pointer;
+  position: absolute;
+
+  right: 1rem;
 }
